# configureable-llm-chatbot

./: AGENTS.md  FINE_TUNING_GUIDE.md  LICENSE  ModelFile.txt  README.md  fine_tuning.py  fine_tuning_colab.ipynb  fine_tuning_config.py  pyproject.toml  rag_chat.py  troubleshooting_cell.json
Documents/Legal/: contract_terms.md
Documents/Medical/: Medicine.md
Documents/Tech/: api_docs.md
chroma_db_Legal/: chroma.sqlite3
chroma_db_Tech/: chroma.sqlite3
chroma_db_medical/: chroma.sqlite3
