[tool.poetry]
name = "config"
version = "0.1.0"
description = "Configurable llm chatbot based on documents"
authors = ["Guduly <133545858+Guduly@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.12"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"