[tool.poetry]
name = "config"
version = "0.1.0"
description = "Configurable llm chatbot based on documents"
authors = ["Guduly <133545858+Guduly@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
langchain = "^0.1.0"
langchain-community = "^0.0.20"
chromadb = "^0.4.22"
sentence-transformers = "^2.3.1"
pypdf = "^4.0.0"
unstructured = "^0.12.0"
python-docx = "^1.1.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"