[tool.poetry]
name = "configureable-llm-chatbot"
version = "0.1.0"
description = "Configurable LLM Chatbot with RAG"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.3.0"
langchain-core = "^0.3.0"
langchain-community = "^0.3.0"
langchain-text-splitters = "^0.3.0"
langchain-ollama = "^0.2.0"
langchain-chroma = "^0.1.0"
langchain-huggingface = "^0.1.0"
chromadb = "^0.5.0"
sentence-transformers = "^3.0.0"
pypdf = "^5.0.0"
pandas = "^2.0.0"
notebook = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"